--- a/media.html
+++ b/media.html
@@ -6,6 +6,12 @@
     <title>Media do aluno</title>
 </head>
 <body>
-    
-</body>
+  <h1>Programa Situação do aluno</h1>
+    <p>Nome do aluno
+     <input type="text" id="inNome" required>
+    </p>
+    <input type="number" id="inNota1"> min="0"
+                                       max="10" 
+                                       step="0,1"
+</body>                
 </html>
