--- a/media.html
+++ b/media.html
@@ -10,8 +10,11 @@
     <p>Nome do aluno
      <input type="text" id="inNome" required>
     </p>
-    <input type="number" id="inNota1"> min="0"
-                                       max="10" 
-                                       step="0,1"
-</body>                
+    <p>1° Nota
+      <input type="number" id="inNota1" min="0" max="10" step="0,1">       
+    </p>        
+    <p>2° Nota
+      <input type="number" id="inNota1" min="0" max="10" step="0,1">
+    </p>                   
+  </body>                
 </html>
