--- a/media.html
+++ b/media.html
@@ -15,6 +15,7 @@
     </p>        
     <p>2° Nota
       <input type="number" id="inNota1" min="0" max="10" step="0,1">
-    </p>                   
+    </p>        
+    <input type="submit" value="exibe media e Situação">           
   </body>                
 </html>
