--- a/media.html
+++ b/media.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media do aluno</title>
+    <title>media do aluno</title>
 </head>
 <body>
-  <h1>Programa Situação do aluno</h1>
-    <p>Nome do aluno
-     <input type="text" id="inNome" required>
+    <h1>Programa Situação do Aluno</h1> 
+<form>
+    <p>Nome do Aluno:
+        <input type="text" id="inNome" required>
     </p>
-    <p> 1° Nota
-      <input type="number" id="inNota1" min="0" max="10" step="0,1">       
-    </p>        
-    <p> 2° Nota
-      <input type="number" id="inNota1" min="0" max="10" step="0,1">
-    </p>        
-    <input type="submit" value="exibe media e Situação">           
-  </body>                
+    <p>1°Nota:
+        <input type="number" id="inNota1" min="0" max="10" step="0.1" required>
+    </p>
+    <p>2°Nota:
+        <input type="number" id="inNota2" min="0" max="10" step="0.1" required>
+    </p>
+    <input type="submit" value="Exibe media e Situação" >
+</form>
+    <h3></h3>
+    <h4></h4>
+    <script src="media.js"></script>
+</body>
 </html>
