--- a/contas.html
+++ b/contas.html
@@ -8,7 +8,7 @@
     <title>Conta do Mês</title>
 </head>
 <body>
-    <img src="img/Contas.jpg" alt="Contas a Pagar" class="alta">
+    <img src="img/contas.jpg" alt="Contas a Pagar" class="alta">
     <h1>Programa Contas do Mês</h1>
        <form>
         <p>Descrição da Conta:
