--- a/tabuada.html
+++ b/tabuada.html
@@ -7,7 +7,7 @@
     <title>Tabuada</title>
 </head>
 <body>
-    <img src="Img/Tabuada.jpg" alt="Números" class="alta">
+    <img src="Img/tabuada.jpg" alt="Números" class="alta">
     <hl>Programa Tabuada</hl>
     <form>
         <p>Números
