--- a/tabuada.html
+++ b/tabuada.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Tabuada</title>
 </head>
 <body>
-    <img src="Img/tabuada.jpg" alt="Números" class="alta">
-    <hl>Programa Tabuada</hl>
+    <img src="img/Tabuada.jpg" alt="Números" class="alta">
+    <h1>Programa Tabuada</h1>
     <form>
-        <p>Números
-          <input type="number id=inNumero" required>
+        <p>Número:
+            <input type="number" id="inNumero" required>
         </p>
         <input type="submit" value="Mostrar Tabuada">
     </form>
     <pre></pre>
     <script src="tabuada.js"></script>
+
 </body>
 </html>
