--- a/triangulo.html
+++ b/triangulo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="style.css">
     <title>Velocidade</title>
 </head>
 <body>
-    <img src="img/exerc.jpg" alt="Exercícios">
+    <img src="" alt="Exercícios">
     <h1>Programa Lados de um Triângulo</h1>
 
 <form>
