--- a/velocidade.html
+++ b/velocidade.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="css/style.css">
-    <title>Velocidade</title>
+    <title>Programa Verifica a Velocidade</title>
 </head>
 <body>
-    <img src="img/exerc.jpg" alt="Exercícios">
-    <h1>Programa Verifica a Velocidade</h1>
-
-<form>
-</p>
-<p>Velocidade Permitida:
-    <input type="number" id="inPermitida" min="5" step="1" required>
-</p>
-<p>Velocidade do Condutor:
-    <input type="number" id="inCondutor"  min="5" step="1" required>
-</p>
-<input type="submit" value="Verificar Velocidade">
-</form>
-<h3></h3>
-<script src="velocidade.js"></script>
+    <img src="img/exerc.jpg" alt="imagem">
+    <h1> Programa Verifica a Velocidade </h1>
+        <p> Velocidade Permitida:
+            <input type= "number" id= "inNome" required>
+        </p>
+            <p> Velocidade do Condutor:
+                <input type= "number" id="inNome" required>
+            </p>
+            <input type="submit" value="Verifica Velocidade">
+        </form>
+        <h3></h3>
+        <script src="velocidade.js"></script>        
 </body>
 </html>
